reparation mouvement vers le bas

--- a/jeu_2048/jeu_2048/Base.lproj/Main.storyboard
+++ b/jeu_2048/jeu_2048/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                     <action selector="resetGame" destination="BYZ-38-t0r" eventType="touchDown" id="cq9-4g-5Ve"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yz9-hV-BL7">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Score : 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yz9-hV-BL7">
                                 <rect key="frame" x="97.052067381323241" y="109.99999999998795" width="197" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
